# P1_Minefield

./: .gitignore  Blast_Radius.c  CMakeLists.txt  Terrain.c  deminers.c  deminers.h  main.c  structs.h  terrain.c  terrain.h
blast radius/: Blast_Radius.c
deminers/: deminers.c  deminers.h
map/: map.c  map.h  map.txt
map/colour/: colour.c  colour.h
movement/: movement.c  movement.h
src/: CMakeLists.txt  main.c  structs.h
src/blast radius/: Blast_Radius.c
src/blast_radius/: blast_radius.c  blast_radius.h
src/deminers/: deminers.c  deminers.h
src/map/: map.c  map.h
src/map/colour/: colour.c  colour.h
src/movement/: movement.c  movement.h
src/path/: path.c  path.h
src/path/start_point/: start_point.c  start_point.h
test/: CMakeLists.txt  test_blast_radius.c  test_main.c  test_main.h  test_map.c  test_obstacles.c  test_path.c  test_start_point.c  test_time.c
test/tests/blast_radius/: test_blast_radius.c  test_blast_radius.h
test/tests/deminers/: test_deminers.c  test_deminers.h
test/tests/map/: test_map.c  test_map.h
test/tests/path/: test_path.c  test_path.h
